@@ -1,5 +1,9 @@
 #VERSION 0.7.9#
 
+*  added object Peak_View_Helpers > fixed Peak_View helper() to use this new helpers objects wrapper.
+                                    We use now $this->helper()->myclass->mymethod() instead of
+                                    $this->helper('myclass')->mymethod()
+
 *  Peak_View > fixed a second issue with setRenderEngine() when calling unknow rendering engine.
 
 *  Peak_Router > added property $params_assoc. fixed resolveRequest() to added params as associative array.
